cleanup code and some tests